# marketplaces

./: guia  pyproject.toml  requeriments.txt  roadmap.txt
backend/: alembic.ini  create_tables.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02fa54de42ac_removed_loja_relation_on_vendas_v5.py  05641ef112b4_vendas_model_created_v3.py  087b124aab44_add_one_to_many_relationship_vendas_e_.py  1622a5016f98_removed_loja_relation_on_vendas.py  2612283999e2_add_one_to_one_relationship_vendas_e_.py  4b132d973468_removed_loja_relation_on_vendas_v2.py  4d0a033f7bb8_usuario_model_fix_to_unique_email.py  5a7fc9aa02bd_removed_columns_id_loja_and_id_programa_.py  6401471f7bcc_inserted_column_valor_bonus_in_loja_.py  71241a9973ee_initial_revision.py  78cd64253827_vendas_model_created_and_relationships.py  792c80521816_usuario_model_created.py  7bca7adc799b_add_one_to_many_to_test_with_.py  8802a61497eb_size_value_columns_url.py  (+13 more)
backend/core/: configs.py  database.py  deps.py
backend/models/: __all_models.py  loja_model.py  produto_model.py  programa_pontos_model.py  resgate_model.py  shop_milhas_model.py  usuario_model.py  venda_model.py
backend/providers/: hash_provider.py  token_provider.py
backend/repositories/: loja_repository.py  produto_repository.py  programa_pontos_repository.py  resgate_repository.py  shop_milhas_repository.py  usuario_repository.py  venda_repository.py
backend/schemas/: loja_schema.py  produto_schema.py  programa_pontos_schema.py  resgate_schema.py  shop_milhas_schema.py  usuario_schema.py  venda_schema.py
(+95 files in other folders)
