[tool.poetry]
name = "delton"
version = "0.1.0"
description = ""
authors = ["Thiago Oliveira <thiceconelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
