[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Thiago Oliveira <thiceconelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
asyncpg = "^0.26.0"
uvicorn = "^0.18.2"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
pytz = "^2022.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pydantic = {version = "^1.9.1", extras = ["email"]}
loguru = "^0.6.0"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
